# oilengine

./: .gitignore  .gitmodules  CMakeLists.txt
application/: CMakeLists.txt  imgui.ini
application/Assets/Shaders/: Texture.glsl  UniformColor.glsl
application/src/: Client2D.cpp  Client2D.h  ClientApp.cpp  ParticleSystem.cpp  ParticleSystem.h  Random.h
editor/Assets/.shaderSources/: shader.glsl  testSh.glsl  test_shader.glsl
editor/Assets/Shaders/: Lighting.glsl  Principled.glsl  Texture.glsl  UniformColor.glsl
editor/Internal/Assets/src/Shaders/: BRDFIntegration.glsl  CubeProjection.glsl  CubemapConvolution.glsl  DefaultSurfaceShader.glsl  EnvironmentPrefilter.glsl  LightApplication.glsl  PBR.glsl  SkyBoxShader.glsl  SkyLightShader.glsl  TestPassthroughShader.glsl  TexDisplayShader.glsl
editor/src/: EditorApp.cpp  EditorLayer.cpp  EditorLayer.h
editor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  MaterialEditorPanel.cpp  MaterialEditorPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  TextureEditorPanel.cpp  TextureEditorPanel.h
editor/src/utils/: UIlib.cpp  UIlib.h
oilengine/: CMakeLists.txt  OilengineConfig.h  OilengineConfig.h.in
oilengine/include/: oil.h
oilengine/src/: oil.h
oilengine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRenderAPI.cpp  OpenGLRenderAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLValidation.cpp  OpenGLValidation.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  imGuiOpenGLRenderer.cpp
oilengine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
oilengine/src/oil/: Application.cpp  Application.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  MouseButtonCodes.h  Window.h  core.h
oilengine/src/oil/Core/: Application.cpp  Application.h  Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.h  Log.h  Profiler.h  Timer.h  Timestep.h  UUID.cpp  UUID.h  Window.h  core.h
oilengine/src/oil/Math/: Math.cpp  Math.h
oilengine/src/oil/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderAPI.cpp  RenderAPI.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
oilengine/src/oil/Scene/: Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
oilengine/src/oil/Utils/: PlatformUtils.h
oilengine/src/oil/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
oilengine/src/oil/imGui/: imGuiBuild.cpp  imGuiLayer.cpp  imGuiLayer.h
oilengine/src/oil/storage/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  EditorAssetManager.cpp  EditorAssetManager.h  FileUtils.cpp  FileUtils.h  RuntimeAssetManager.h  Serializer.cpp  Serializer.h
oilengine/src/pch/: oilpch.h  oilpch.h.d
